--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,61 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.container{
+  width: 80%;
+  margin: auto;
+}
+
+.product{
+  width: 30%;
+  background-color: bisque;
+  display: inline-block;
+  margin: 0 1%;
+}
+
+.product .top{
+  position: relative;
+}
+
+.top img{
+  width: 100%;
+}
+
+.like{
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 15px;
+}
+
+.like::after{
+  content:'\2665';
+  color: black;
+  font-size: 25px;
+  line-height: 40px;
+}
+
+.label{
+  position: absolute;
+  left: 0;
+  bottom: 30px;
+}
+
+.discount, .green{
+  font-size: 14px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+}
+
+.discount{
+  background-color: #E0002F;
+}
+
+.green{
+  background-color: #167549;
+}
