--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
   margin: 30px auto;
 }
 
+.row{
+  margin-bottom: 40px;
+}
+
 .product{
   width: 30%;
   display: inline-block;
@@ -84,7 +88,7 @@
 }
 
 .brand{
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .sales-price, .original-price{
